story layout recycler view added

--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -74,7 +74,7 @@
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/emailTitleET"
+                android:id="@+id/emailSignUpET"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginBottom="20dp"
