--- a/app/src/main/res/drawable/rectangle_border_rounded.xml
+++ b/app/src/main/res/drawable/rectangle_border_rounded.xml
@@ -5,6 +5,12 @@
         android:width="1dp"
         android:color="#4D70B1" />
 
-    <corners android:radius="@dimen/card_border_radius" />
+    <corners
+        android:topRightRadius="@dimen/card_border_radius"
+        android:bottomLeftRadius="@dimen/card_border_radius"
+        android:topLeftRadius="@dimen/card_border_radius"
+        android:bottomRightRadius="@dimen/card_border_radius"
+
+        />
 
 </shape>
