--- a/app/src/main/res/layout/activity_post_viewe.xml
+++ b/app/src/main/res/layout/activity_post_viewe.xml
@@ -79,7 +79,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/text_color_seconday" />
+        android:background="@color/view_color" />
 
     <TextView
         android:id="@+id/tvDesc"
@@ -92,6 +92,7 @@
         android:textSize="16sp" />
 
     <TextView
+        android:layout_marginTop="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="16dp"
