--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -3,149 +3,152 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:id="@+id/linerLayout"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="@dimen/activity_vertical_margin">
-
-
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="140dp"
-            android:layout_marginBottom="@dimen/margin_medium_small"
-            android:text="@string/login_text"
-            android:textColor="@color/black"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+        android:layout_height="match_parent">
 
         <LinearLayout
+            android:id="@+id/linerLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="50dp"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="@dimen/activity_vertical_margin">
+
 
             <TextView
-
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Don't have an account?"
+                android:layout_marginTop="100dp"
+                android:layout_marginBottom="@dimen/margin_medium_small"
+                android:text="@string/login_text"
                 android:textColor="@color/black"
-                android:textSize="18sp" />
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="50dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Don't have an account?"
+                    android:textColor="@color/black"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/registerTV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="4dp"
+                    android:text="SIGN UP"
+                    android:textColor="@color/pink"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+
 
             <TextView
-                android:id="@+id/registerTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingStart="4dp"
-                android:text="SIGN UP"
-                android:textColor="@color/pink"
-                android:textSize="18sp" />
+                android:text="EMAIL"
+                android:textColor="@color/grey"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
-        </LinearLayout>
-
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingStart="4dp"
-            android:text="EMAIL"
-            android:textColor="@color/grey"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
-        <EditText
-            android:id="@+id/emailET"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_marginBottom="20dp"
-            android:inputType="textEmailAddress" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingStart="4dp"
-            android:text="PASSWORD"
-            android:textColor="@color/grey"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
-        <EditText
-            android:id="@+id/passwordFieldET"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:inputType="textPassword" />
-
-        <TextView
-            android:id="@+id/forgetPasswordTV"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_medium_small"
-            android:gravity="right"
-            android:text="Forget Password"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
-
-<!--        <RadioGroup-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="horizontal">-->
-
-<!--            <RadioButton-->
-<!--                android:id="@+id/radio_admin"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:checked="true"-->
-<!--                android:onClick="onRadioButtonClicked"-->
-<!--                android:text="ADMIN" />-->
-
-<!--            <RadioButton-->
-<!--                android:id="@+id/radio_user"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:onClick="onRadioButtonClicked"-->
-<!--                android:text="USER" />-->
-<!--        </RadioGroup>-->
-
-        <RelativeLayout
-            android:id="@+id/loginWithFBRL"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_large"
-            android:background="@drawable/rectangle_border_rounded"
-            android:onClick="onFacebookLogin">
+            <EditText
+                android:id="@+id/emailET"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginBottom="20dp"
+                android:inputType="textEmailAddress" />
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="60dp"
-                android:layout_centerInParent="true"
-                android:drawableStart="@drawable/ic_facebook"
-                android:drawablePadding="16dp"
-                android:gravity="center"
-                android:text="Login With Facebook"
-                android:textColor="	#4267B2"
+                android:layout_height="wrap_content"
+                android:paddingStart="4dp"
+                android:text="PASSWORD"
+                android:textColor="@color/grey"
                 android:textSize="18sp"
                 android:textStyle="bold" />
-        </RelativeLayout>
+
+            <EditText
+                android:id="@+id/passwordFieldET"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:inputType="textPassword" />
+
+            <TextView
+                android:id="@+id/forgetPasswordTV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_medium_small"
+                android:gravity="right"
+                android:text="Forget Password"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
 
-        <Button
-            android:id="@+id/loginBtn"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_marginTop="20dp"
-            android:background="@color/pink"
-            android:text="Login"
-            android:textColor="#FFFFFF"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            <!--        <RadioGroup-->
+            <!--            android:layout_width="match_parent"-->
+            <!--            android:layout_height="wrap_content"-->
+            <!--            android:orientation="horizontal">-->
+
+            <!--            <RadioButton-->
+            <!--                android:id="@+id/radio_admin"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:checked="true"-->
+            <!--                android:onClick="onRadioButtonClicked"-->
+            <!--                android:text="ADMIN" />-->
+
+            <!--            <RadioButton-->
+            <!--                android:id="@+id/radio_user"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:onClick="onRadioButtonClicked"-->
+            <!--                android:text="USER" />-->
+            <!--        </RadioGroup>-->
 
 
-    </LinearLayout>
+            <RelativeLayout
+                android:id="@+id/loginWithFBRL"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_large"
+                android:background="@drawable/rectangle_border_rounded"
+                android:onClick="onFacebookLogin">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="60dp"
+                    android:layout_centerInParent="true"
+                    android:drawableStart="@drawable/ic_facebook"
+                    android:drawablePadding="16dp"
+                    android:gravity="center"
+                    android:text="Login With Facebook"
+                    android:textColor="	#4267B2"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+            </RelativeLayout>
+
+            <Button
+                android:id="@+id/loginBtn"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginTop="20dp"
+                android:background="@color/pink"
+                android:text="Login"
+                android:textColor="#FFFFFF"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+
+        </LinearLayout>
+    </ScrollView>
 
 
     <ImageView
